--- a/travis.yml
+++ b/travis.yml
@@ -5,4 +5,7 @@ python:
     - "3.6"
     
 install:
-python setup.py install
+    - python setup.py install
+    
+script:
+    - python run_tests.py
