--- a/travis.yml
+++ b/travis.yml
@@ -1,7 +1,20 @@
+# Disable sudo to speed up the build
+sudo: false
+
+# Set the build language to Python
 language: python
-python:
-  - "3.6"
+
+# Set the python version to 2.7
+python: 2.7
+
+# Install the codecov pip dependency
 install:
-  - python setup.py install  
+  - pip install codecov
+
+# Run the unit test
 script:
-  - python run_tests.py
+  - coverage run tests.py
+
+# Push the results back to codecov
+after_success:
+  - codecov
